// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay [common] example testing should match snapshot(s) for basic 1`] = `
<Portal
  portalId="1-Overlay-Portal-6"
>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      classNames="lucid-Overlay"
      timeout={300}
    />
  </TransitionGroup>
</Portal>
`;

exports[`Overlay [common] example testing should match snapshot(s) for no-modal 1`] = `
<Portal
  portalId="1-Overlay-Portal-7"
>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      classNames="lucid-Overlay"
      timeout={300}
    />
  </TransitionGroup>
</Portal>
`;

exports[`Overlay should render with isAnimated=false 1`] = `
<Portal
  portalId="1-Overlay-Portal-11"
/>
`;
